<resources>
    <string name="app_name">Demo</string>
    <string name="app_url_scheme">re.notifica</string>
    <string name="no_internet_label">No internet connection found</string>
    <string name="loader">Loading...</string>

    <string name="onboarding">text for onboarding</string>

    <string name="title_signin">Sign In</string>
    <string name="title_signup">Create Account</string>
    <string name="title_profile">Profile</string>
    <string name="title_lostpass">Forgot Password?</string>
    <string name="title_validate">Validate Account</string>
    <string name="title_resetpass">Recover Password</string>
    <string name="title_storage">Storage</string>
    <string name="title_beacons">Beacons</string>
    <string name="title_scannable">Scannable</string>

    <string name="title_settings">Settings</string>
    <string name="settings_section_title_general">Notification Settings</string>
    <string name="settings_section_title_others">About this app</string>
    <string name="settings_general_notifications_label">Notifications</string>
    <string name="settings_general_notifications_description">Authorize this app to send you notifications.</string>
    <string name="settings_general_location_label">Location Services</string>
    <string name="settings_general_location_description">Authorize this app to collect your location in order to send you promotions when you visit our stores.</string>
    <string name="settings_general_beacons_label">Beacon Scanning</string>
    <string name="settings_general_beacons_description">Scan for beacons in the foreground for faster response.</string>
    <string name="settings_general_dnd_label">Do Not Disturb</string>
    <string name="settings_general_dnd_description">Configure a period of time in which this app will not disturb you with notifications.</string>
    <string name="settings_general_dnd_start_label">From</string>
    <string name="settings_general_dnd_end_label">To</string>
    <string name="settings_general_dnd_updating_message">Do Not Disturb period has been updated.</string>
    <string name="settings_general_dnd_next_day_label">next day</string>
    <string name="settings_others_feedback_label">Leave us some feedback</string>
    <string name="settings_others_feedback_description">Send us an email with suggestions, bugs or any other information you may find useful.</string>
    <string name="settings_others_app_version_label">Version</string>

    <string name="title_inbox">Inbox</string>
    <string name="title_empty_inbox">No messages found</string>
    <string name="title_mark">Mark All</string>
    <string name="title_delete">Delete</string>
    <string name="title_clear">Clear All</string>

    <string name="button_location_permission_rationale_ok">Accept</string>
    <string name="button_location_permission_rationale_cancel">No thanks</string>
    <string name="alert_location_permission_rationale">We would like to make use of your location to present relevant information about offers around you or when you visit our stores.</string>
    <string name="alert_background_location_permission_rationale">We would like to make use of your location at all times to present relevant information about offers around you or when you visit our stores, even if you are not actively using the app.</string>
    <string name="alert_bluetooth_scan_permission_rationale">We would like to make use of bluetooth beacons to present relevant information about offers around you or when you visit our stores.</string>

    <string name="your_subject">Write a subject</string>
    <string name="your_message">Write a message</string>

    <string name="title_regions">Stores &amp; Venues</string>

    <string name="hint_email">email</string>
    <string name="hint_pass">password</string>
    <string name="hint_name">name</string>
    <string name="hint_confirm_pass">confirm password</string>
    <string name="hint_event_name">Type an event name</string>
    <string name="hint_search_assets">Type an asset group name</string>


    <string name="button_sign_in">sign in</string>
    <string name="button_sign_up">create an account</string>
    <string name="button_forgot_pass">forgotten password</string>
    <string name="button_lost_pass">recover password</string>
    <string name="button_reset_pass">reset password</string>

    <string name="error_sign_in">Invalid credentials</string>
    <string name="error_sign_up">Please fill in all fields</string>
    <string name="error_lost_pass">Please fill in a valid email</string>
    <string name="error_reset_pass">Please fill in a new password</string>
    <string name="error_reset_pass_confirm">Please confirm the new password</string>
    <string name="error_invalid_name">Please insert your name</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_pass_too_short">Password is too short</string>
    <string name="error_pass_not_match">Passwords don\'t match. Please confirm the same password twice.</string>
    <string name="error_email_not_found">No account found for that email</string>
    <string name="error_generate_token">Could not generate token</string>
    <string name="error_change_password">Could not change password</string>
    <string name="success_account_created">Account created successfully. You can now sign in.</string>
    <string name="success_email_found">Account found. Please check your mailbox for more information.</string>
    <string name="success_reset_pass">Password changed successfully. You can now sign in.</string>
    <string name="success_generate_token">New token generated successfully.</string>
    <string name="success_change_password">Password changed successfully.</string>

    <string name="error_reset_pass_token">Unknown reset password token</string>

    <string name="error_validate_token">Unknown validate token</string>
    <string name="validating_account">Validating account please wait...</string>
    <string name="success_validate_account">Account validated successfully</string>

    <string name="analytics_text">Create a custom event by typing an event name</string>
    <string name="title_empty_assets">No assets found</string>
    <string name="title_search_assets">Search</string>
    <string name="title_intro_assets">Use the search option above to search for asset groups created in the dashboard.</string>

    <string name="header_user_preferences">User Preferences</string>

    <string name="signout">Signing out...</string>
    <string name="text_change_pass">Change your current password</string>

    <string name="label_user_profile">User Profile</string>
    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_push_email">Push Email</string>
    <string name="label_member_card">Open Member Card</string>
    <string name="label_change_pass">Change Password</string>
    <string name="label_generate_token">New Push Email</string>
    <string name="label_signout">Sign Out</string>

    <string name="content_description_beacon_icon">beacon</string>
    <string name="title_empty_beacons">No beacons found</string>
    <string name="lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet</string>
    <string name="url_clicked">URL was clicked</string>
    <string name="header">header</string>
    <string name="delete">delete</string>
    <string name="image">image</string>
    <string name="icon">icon</string>
    <string name="forward">forward</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="open">Open</string>
    <string name="account">account</string>

</resources>
