<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="re.notifica.hybrid.SignUpFragment">

    <ScrollView android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:id="@+id/layoutForScroll"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorBackground" >


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/account"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/hint_name" >
            </EditText>

            <EditText
                android:id="@+id/emailField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email" >
            </EditText>

            <EditText
                android:id="@+id/passField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:hint="@string/hint_pass" >
            </EditText>

            <EditText
                android:id="@+id/confirmPassField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_pass" >
            </EditText>

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button_sign_up"
                android:textSize="20dp"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
