<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="re.notifica.hybrid.SignInFragment">

    <ScrollView android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorBackground">
        <LinearLayout
            android:id="@+id/layoutForScroll"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/colorBackground" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/padlock"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp">
            </EditText>

            <EditText
                android:id="@+id/pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textPassword"
                android:hint="@string/hint_pass" >
            </EditText>


            <Button
                android:id="@+id/buttonLostPass"
                android:layout_width="fill_parent"
                android:layout_height="32dp"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorBackground"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:stateListAnimator="@null"
                android:text="@string/button_forgot_pass"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:gravity="bottom|end" />

            <Button
                android:id="@+id/buttonSignin"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button_sign_in"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button_sign_up"
                android:textSize="20sp"
                android:layout_gravity="bottom" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>
