<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true" >

    <ScrollView android:id="@+id/ScrlView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorBackground"  >
        <LinearLayout
            android:id="@+id/layoutForScroll"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/key"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:hint="@string/hint_pass" >
            </EditText>

            <EditText
                android:id="@+id/confirmPass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:hint="@string/hint_confirm_pass" >
            </EditText>

            <Button
                android:id="@+id/buttonResetPass"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:textColor="#FFFFFF"
                android:background="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/button_reset_pass"
                android:textSize="20dp"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
